css/style.css
/*Added on 2080-10-23*/
/*Process101 - araniko college computer science club*/
/* global */
/* PROBLEM IN IMPORT WAIT A SEC COMMENT IT */
@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Poppins&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Michroma&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Gruppo&family=Major+Mono+Display&family=Michroma&display=swap');

html{
  scroll-behavior: smooth;
}

body {
  /* max-width: 1080px; */
  background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url(../images/background.png);
  background-size: cover;
   color: #fff;
}
.container{
  margin: 0 auto;
  width: 1080px;
}
h2{
    text-transform: uppercase;
}

.white {
  color: white;
}

a {
  text-transform: uppercase;
  text-decoration: none;
}

.section-1{
  font-family: 'Orbitron', sans-serif;
  color: white;
  margin-top: 10vh;
  text-align: center;
}

/* section 2 */
.section-2 {
  padding-top: 10vh;
  width: 85%;
  color: white;
  font-family: "Michroma", sans-serif;
}

.section-2 #ab:hover{
  color: #e0dcdc;
}

.section-3 {
  font-family: "Gruppo", sans-serif;
  font-weight: 400;
  font-style: normal;
  margin-top: 6%;
}

.section-3 a:hover{
  color: #e0dcdc;
}

/* .section-3 ul li{
  list-style: decimal;
  margin: 0 0 2px 0;
} 

.section-3 ul li a{
  color: #fff;
} */

/* added footer */
.footer {
  font-family: 'Orbitron', sans-serif;
  background-color: #333;
  color: #fff;
  text-align: center;
  padding: 3px;
  bottom: 0;
  left: 0;
  right: 0;
}

/* media queres */
@media screen and (max-width:780px) {
.section-1 {
  padding: 0;
  padding-top: 5rem;
}

.section-2 {
  margin-bottom: 15%;
  padding: 0;
  padding-left: 1.5rem;
  padding-top: 2rem;
}
}

